src/objects/customReport__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SCP Custom Report</relationshipLabel>
        <relationshipName>SCP_Custom_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actionPlan__c</fullName>
        <defaultValue>true</defaultValue>
        <label>actionPlan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clientContext__c</fullName>
        <defaultValue>true</defaultValue>
        <label>clientContext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>competitors__c</fullName>
        <defaultValue>true</defaultValue>
        <label>competitors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dcm__c</fullName>
        <defaultValue>true</defaultValue>
        <label>dcm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>growthStrategy__c</fullName>
        <defaultValue>true</defaultValue>
        <label>growthStrategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>industryTrend__c</fullName>
        <defaultValue>true</defaultValue>
        <label>industryTrend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>influenceMap__c</fullName>
        <defaultValue>true</defaultValue>
        <label>influenceMap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kpi__c</fullName>
        <defaultValue>true</defaultValue>
        <label>kpi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netActivity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>netActivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provenValue__c</fullName>
        <defaultValue>true</defaultValue>
        <label>provenValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>valueDrivers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>valueDrivers</label>
        <type>Checkbox</type>
    </fields>
    <label>SCP Custom Report</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de SCP Custom Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Custom Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>